fix: testspec.yml

--- a/codebuild/testspec.yml
+++ b/codebuild/testspec.yml
@@ -20,5 +20,7 @@ phases:
 
 artifacts:
   files:
-    - test-reports/**
+    - app.py
+    - requirements.txt
+    - templates/**
   discard-paths: yes
